--- a/app/index.html
+++ b/app/index.html
@@ -21,5 +21,8 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
+  <script src="https://cdn.firebase.com/v0/firebase.js"></script>
+  <script src="https://cdn.firebase.com/libs/angularfire/0.3.0/angularfire.js"></script>
+  <script src="https://cdn.firebase.com/v0/firebase-simple-login.js"></script>
 </body>
 </html>
