change to foundation

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Never Eeat Alone</title>
-  <link rel="stylesheet" href="css/app.css"/>
+  <title>Never Eeat Alone</title>
+  <link rel="stylesheet" href="foundation/css/foundation.css"/>
+  <script src="foundation/js/vendor/custom.modernizr.js"></script>
 </head>
 <body>
 
