--- a/app/index.html
+++ b/app/index.html
@@ -1,18 +1,15 @@
 <!doctype html>
+
 <html lang="en" ng-app="neverEatAloneApp">
 <head>
   <meta charset="utf-8">
-  <title>Never Eeat Alone</title>
-  <title>Never Eeat Alone</title>
+  <title>Never Eat Alone</title>
   <link rel="stylesheet" href="foundation/css/foundation.css"/>
   <script src="foundation/js/vendor/custom.modernizr.js"></script>
 </head>
 <body>
 
-  
   <div ng-view></div>
-
-  
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
