Added event creation

--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Never Eat Alone</title>
   <link rel="stylesheet" href="foundation/css/foundation.css"/>
+  <link rel="stylesheet" href="css/app.css"/>
   <script src="foundation/js/vendor/custom.modernizr.js"></script>
 </head>
 <body>
