--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,9 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
+  <script src="foundation/js/foundation/foundation.js"></script>
+  <script src="foundation/js/vendor/zepto.js"></script>
+  <script src="foundation/js/foundation/foundation.forms.js"></script>
   <script src="https://cdn.firebase.com/v0/firebase.js"></script>
   <script src="https://cdn.firebase.com/libs/angularfire/0.3.0/angularfire.js"></script>
   <script src="https://cdn.firebase.com/v0/firebase-simple-login.js"></script>
