More styling changes

--- a/app/index.html
+++ b/app/index.html
@@ -7,11 +7,16 @@
   <link rel="stylesheet" href="foundation/css/foundation.css"/>
   <link rel="stylesheet" href="css/app.css"/>
   <script src="foundation/js/vendor/custom.modernizr.js"></script>
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
 
   <div ng-view></div>
-
+  <footer>
+   
+        &copy; Never Lunch Solo
+     
+  </footer>
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
   -->
