Updated mobile view

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/app.css"/>
   <script src="foundation/js/vendor/custom.modernizr.js"></script>
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+  <meta name = "viewport" content = "user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width /">
 </head>
 <body>
 
