Updated titles on home page

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <html lang="en" ng-app="neverEatAloneApp">
 <head>
   <meta charset="utf-8">
-  <title>Never Eat Alone</title>
+  <title>Never Lunch Solo</title>
   <link rel="stylesheet" href="foundation/css/foundation.css"/>
   <link rel="stylesheet" href="css/app.css"/>
   <script src="foundation/js/vendor/custom.modernizr.js"></script>
@@ -29,6 +29,7 @@
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="foundation/js/foundation/foundation.js"></script>
   <script src="foundation/js/vendor/zepto.js"></script>
   <script src="foundation/js/foundation/foundation.forms.js"></script>
