--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,7 @@
   <script src="foundation/js/foundation/foundation.js"></script>
   <script src="foundation/js/vendor/zepto.js"></script>
   <script src="foundation/js/foundation/foundation.forms.js"></script>
+  <script src="foundation/js/foundation/foundation.topbar.js"></script>
   <script src="https://cdn.firebase.com/v0/firebase.js"></script>
   <script src="https://cdn.firebase.com/libs/angularfire/0.3.0/angularfire.js"></script>
   <script src="https://cdn.firebase.com/v0/firebase-simple-login.js"></script>
